--- a/example/output.html
+++ b/example/output.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel='icon' type='image/png' href='./favicon.png'>
 		<meta name="viewport" content="width=device-width" />
 		<style type="text/css">
 		
@@ -9,17 +10,11 @@
 		}
 
 		</style>	
-		<link href="something.css" rel='stylesheet' type='text/css' />	
+		
 	</head>
 	<body>
 	
-	<script type="text/javascript">
-	var i = "1"
-	</script>
-	
-	<script type="text/javascript">
-	var i = "1"
-	</script>	
+		
  	
 	<script type="text/javascript" src="something.js"></script>
 	<script type="text/javascript" src="something2.js"></script>	
