html happened  oohh bby

--- a/example/output.html
+++ b/example/output.html
@@ -13,6 +13,16 @@
 		
 	</head>
 	<body>
+
+<section><h1>Project Name</h1>
+<h2>Project subtitle: for the modern age</h2>
+<p>This is a paragraph about the project 
+man it's so cool I bet you wish your project 
+was this cool</p><section><section><section><p>style me here</p><section><p>style me pls</p><section><p>style me too</p></section></section></section><section><section><p>this content goes in the middle column</p></section><section><section><p>this content goes in the right column</p></section></section></section></section><section><p>shit son we're so cool man so cool so cool man we're so cool</p>
+<p>BUY THESE HEADPHONES: JVC HA-M750
+Koss Portapro &lt;- runnng?</p><section><p>| a    | b  | c |
+| easy | as |   |
+| 1    | 2  | 3 |</p></section><section><p>Made with <a href="http://marketdown.com">MarketDown</a></p></section></section></section></section>
 	
 		
  	
