I was dumb all along

--- a/example/output.html
+++ b/example/output.html
@@ -5,24 +5,124 @@
 		<meta name="viewport" content="width=device-width" />
 		<style type="text/css">
 		
-		body {
-			width:100%;
+		.custom {
+			content: "some shit";
 		}
-
-		</style>	
 		
+		
+		</style>
+		<style type="text/css">
+		.custom {
+		  background-color: red; }
+		
+		</style>	
+		<link href="something.css" rel='stylesheet' type='text/css' />	
 	</head>
 	<body>
 
-<section><h1>Project Name</h1>
-<h2>Project subtitle: for the modern age</h2>
-<p>This is a paragraph about the project 
-man it's so cool I bet you wish your project 
-was this cool</p><section><section><section><p>style me here</p><section><p>style me pls</p><section><p>style me too</p></section></section></section><section><section><p>this content goes in the middle column</p></section><section><section><p>this content goes in the right column</p></section></section></section></section><section><p>shit son we're so cool man so cool so cool man we're so cool</p>
-<p>BUY THESE HEADPHONES: JVC HA-M750
-Koss Portapro &lt;- runnng?</p><section><p>| a    | b  | c |
-| easy | as |   |
-| 1    | 2  | 3 |</p></section><section><p>Made with <a href="http://marketdown.com">MarketDown</a></p></section></section></section></section>
+<section id="Head">
+
+	<h1>
+	Project Name
+	</h1>
+	
+	
+	<h2>
+	Project subtitle: for the modern age
+	</h2>
+	
+	
+	<p>
+	This is a paragraph about the project 
+	man it's so cool I bet you wish your project 
+	was this cool
+	</p>
+
+</section>
+
+<section id="About">
+	<section id="column1">
+		<section class="custom">
+
+			<p>
+			style me here
+			</p>
+
+		</section>
+		<section class="custom">
+
+			<p>
+			style me pls
+			</p>
+
+		</section>
+		<section class="custom">
+
+			<p>
+			style me too
+			</p>
+
+		</section>
+
+	</section>
+	<section id="column2-3">
+		<section >
+
+		</section>
+
+		<p>
+		this content goes in the middle column
+		</p>
+
+	</section>
+	<section id="column4">
+		<section >
+
+		</section>
+
+		<p>
+		this content goes in the right column
+		</p>
+
+	</section>
+
+</section>
+
+<section id="Anotherdiv">
+
+	<p>
+	shit son we're so cool man so cool so cool man we're so cool
+	</p>
+	
+	
+	<p>
+	BUY THESE HEADPHONES: JVC HA-M750
+	Koss Portapro &lt;- runnng?
+	</p>
+	<section id="table">
+
+		<p>
+		| a    | b  | c |
+		| easy | as |   |
+		| 1    | 2  | 3 |
+		</p>
+
+	</section>
+
+</section>
+
+<section id="Footer">
+
+	<p>
+	Made with 
+	<a href="http://marketdown.com">
+	MarketDown
+	</a>
+	
+	</p>
+
+</section>
+
 	
 		
  	
