--- a/example/output.html
+++ b/example/output.html
@@ -66,20 +66,14 @@
 
 	</section>
 	<section id="column2-3">
-		<section >
-
-		</section>
-
+		<img src="./middleimage.jpg" alt="./middleimage.jpg">
 		<p>
 		this content goes in the middle column
 		</p>
 
 	</section>
 	<section id="column4">
-		<section >
-
-		</section>
-
+		<img src="./rightimage.jpg" alt="./rightimage.jpg">
 		<p>
 		this content goes in the right column
 		</p>
