--- a/example/output.html
+++ b/example/output.html
@@ -25,9 +25,8 @@ body {
     margin-left: auto;
     margin-right: auto; }
 
-code, pre {
-  font-family: Inconsolata;
-  border: 1px solid red; }
+code {
+  font-family: Inconsolata; }
 
 h1, h2, h3, h4, h5 {
   font-weight: 300;
@@ -42,7 +41,10 @@ h2 {
 h3 {
   font-size: 16px; }
 
-p {
+* {
+  font-size: 16px; }
+
+code, pre {
   font-size: 16px; }
 
 .lc {
@@ -70,7 +72,7 @@ a {
   -moz-background-size: cover;
   -o-background-size: cover;
   -webkit-background-size: cover;
-  background: rgba(218, 114, 126, 0.3) url(./img.jpg);
+  background: rgba(218, 114, 126, 0.5) url(./img.jpg);
   background-position: center;
   height: 100%;
   min-height: 768px/2;
@@ -105,8 +107,10 @@ a {
 #About {
   margin-left: auto;
   margin-right: auto;
-  font-size: 0; }
+  font-size: 0;
+  width: 1024px; }
   #About > section {
+    vertical-align: top;
     display: inline-block !important;
     padding: 32px; }
     #About > section h1, #About > section h2, #About > section h3, #About > section h4, #About > section h5 {
@@ -118,19 +122,21 @@ a {
       font-size: 32px; }
     #About > section h3 {
       font-size: 16px; }
-    #About > section p {
+    #About > section * {
+      font-size: 16px; }
+    #About > section code, #About > section pre {
       font-size: 16px; }
 
 #column1 {
   position: relative;
-  width: 340.33333px; }
+  width: 319px; }
   #column1 h1 {
     text-align: center; }
   #column1 img {
     width: 100%; }
 
 #column2-3 {
-  width: 681.66667px; }
+  width: 639px; }
 
 #Anotherdiv img {
   width: 192px;
@@ -152,77 +158,73 @@ a {
 
 <section id="Head" class="lc2"><section class="xycenteredinner">
 
-	<h1>
-	&#9660; AntiStrap
-	</h1>
-	
-	
-	<h2>
-	Markdown for the modern age
-	</h2>
-	
-	
-	<p>
-	StrapStrap is a simple markup language made for the 
-	rapid prototyping of longscroll information websites. 
-	</p>
-	
-	
-	<p>
-	With A simple Markdown-like syntax, StrapStrap allows programmers
-	to produce beautiful-looking and highly customizable sites with
-	little knowledge of design or ingoing effort.
-	</p>
+<h1>
+&#9660; AntiStrap
+</h1>
+
+
+<h2>
+Markdown for the modern age
+</h2>
+
+
+<p>
+StrapStrap is a simple markup language made for the 
+rapid prototyping of longscroll information websites. 
+</p>
+
+
+<p>
+With A simple Markdown-like syntax, StrapStrap allows programmers
+to produce beautiful-looking and highly customizable sites with
+little knowledge of design or ingoing effort.
+</p>
 
 </section></section>
 
 <section id="About">
 	<section id="column1">
 		<img src="./code.png" alt="./code.png">
-		<h1>
-		Simple Syntax
-		</h1>
-		
-		
-		<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at augue interdum est volutpat ultricies. Donec laoreet mi hendrerit ipsum porta ultricies. Nunc nulla nisi, rhoncus nec dignissim non, eleifend ac magna.
-		</p>
+<h1>
+Simple Syntax
+</h1>
+
+
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at augue interdum est volutpat ultricies. Donec laoreet mi hendrerit ipsum porta ultricies. Nunc nulla nisi, rhoncus nec dignissim non, eleifend ac magna.
+</p>
 
 	</section>
 	<section id="column2-3">
 
-		<pre>
-		
-		<code>
-		:: Head .lc2
-		: fullfold
-		: xycentered
-		: background ./img.jpg
-		: bgfill hilight 0.8
-		
-		#StrapStrap
-		##Markdown for the modern age
-		
-		StrapStrap is a simple markup language made for the 
-		rapid prototyping of longscroll information websites.
-		
-		With A simple Markdown-like syntax, StrapStrap allows programmers
-		to produce beautiful-looking and highly customizable sites with
-		little knowledge of design or ingoing effort.
-		
-		
-		:: About
-		: columns 3
-		
-		:: column1
-		    #Simple Syntax
-		
-		    StrapStrapDown's simple syntax allows users
-		    to suck a dick wooo get at me noobs
-		
-		</code>
-		
-		</pre>
+<pre>
+:: Head .lc2
+: fullfold
+: xycentered
+: background ./img.jpg
+: bgfill hilight 0.8
+
+#StrapStrap
+##Markdown for the modern age
+
+StrapStrap is a simple markup language made for the 
+rapid prototyping of longscroll information websites.
+
+With A simple Markdown-like syntax, StrapStrap allows programmers
+to produce beautiful-looking and highly customizable sites with
+little knowledge of design or ingoing effort.
+
+
+:: About
+: columns 3
+
+:: column1
+    #Simple Syntax
+
+    StrapStrapDown's simple syntax allows users
+    to suck a dick wooo get at me noobs
+
+</pre>
 
 	</section>
 
@@ -230,31 +232,31 @@ a {
 
 <section id="Anotherdiv">
 
-	<h1>
-	Hey, Check This Out
-	</h1>
-	
-	
-	<h2>
-	Look at all these things we can do
-	</h2>
+<h1>
+Hey, Check This Out
+</h1>
+
+
+<h2>
+Look at all these things we can do
+</h2>
 	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">
 </section>
 
 <section id="Footer" class="dc"><section class="xycenteredinner">
 
-	<p>
-	Made with 
-	<a href="http://marketdown.com">
-	MarketDown
-	</a>
-	
-	</p>
-	
-	
-	<p>
-	Max @ Pennapps 2014
-	</p>
+<p>
+Made with 
+<a href="http://marketdown.com">
+&#9660; AntiStrap
+</a>
+
+</p>
+
+
+<p>
+Max @ Pennapps 2014
+</p>
 
 </section></section>
 
