--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel='icon' type='image/png' href='./favicon.png'>
+		<link rel='icon' type='image/png' href='./example/favicon.png'>
 		<meta name="viewport" content="width=device-width" />
 		<style type="text/css">
 @import url(http://fonts.googleapis.com/css?family=Inconsolata|Raleway:200,300,400);
@@ -72,7 +72,7 @@ a {
   -moz-background-size: cover;
   -o-background-size: cover;
   -webkit-background-size: cover;
-  background: rgba(218, 114, 126, 0.5) url(./img.jpg);
+  background: rgba(218, 114, 126, 0.5) url(./example/img.jpg);
   background-position: center;
   height: 100%;
   min-height: 768px/2;
@@ -184,7 +184,7 @@ little knowledge of design or ingoing effort.
 
 <section id="About">
 	<section id="column1">
-		<img src="./code.png" alt="./code.png">
+		<img src="./example/code.png" alt="./example/code.png">
 <h1>
 Simple Syntax
 </h1>
@@ -201,7 +201,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at augue interdum
 :: Head .lc2
 : fullfold
 : xycentered
-: background ./img.jpg
+: background ./example/img.jpg
 : bgfill hilight 0.8
 
 #StrapStrap
@@ -240,14 +240,14 @@ Hey, Check This Out
 <h2>
 Look at all these things we can do
 </h2>
-	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">	<img src="./hover.jpg" alt="./hover.jpg">
+	<img src="./example/hover.jpg" alt="./example/hover.jpg">	<img src="./example/hover.jpg" alt="./example/hover.jpg">	<img src="./example/hover.jpg" alt="./example/hover.jpg">	<img src="./example/hover.jpg" alt="./example/hover.jpg">	<img src="./example/hover.jpg" alt="./example/hover.jpg">	<img src="./example/hover.jpg" alt="./example/hover.jpg">	<img src="./example/hover.jpg" alt="./example/hover.jpg">	<img src="./example/hover.jpg" alt="./example/hover.jpg">
 </section>
 
 <section id="Footer" class="dc"><section class="xycenteredinner">
 
 <p>
 Made with 
-<a href="https://github.com/Adjective-Object/strapstrap">
+<a href="http://marketdown.com">
 &#9660; AntiStrap
 </a>
 
