--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Look at all these things we can do
 
 <p>
 Made with 
-<a href="http://marketdown.com">
+<a href="https://github.com/Adjective-Object/strapstrap">
 &#9660; AntiStrap
 </a>
 
