--- a/example/output.html
+++ b/example/output.html
@@ -72,7 +72,7 @@ a {
   -moz-background-size: cover;
   -o-background-size: cover;
   -webkit-background-size: cover;
-  background: rgba(218, 114, 126, 0.5) url(./img.jpg);
+  background: rgba(218, 114, 126, 0.5) url(./example/img.jpg);
   background-position: center;
   height: 100%;
   min-height: 768px/2;
