--- a/example/output.html
+++ b/example/output.html
@@ -85,7 +85,8 @@ a {
   padding: 64px;
   position: relative;
   z-index: 2;
-  margin-top: -200px; }
+  margin-top: -200px;
+  border-radius: 2px; }
 
 .xycenteredinner {
   position: absolute;
@@ -140,7 +141,15 @@ a {
 
 #Anotherdiv img {
   width: 192px;
-  margin: 16px; }
+  margin: 16px;
+  position: relative;
+  top: 0;
+  border-radius: 2px;
+  opacity: 0.8; }
+  #Anotherdiv img:hover {
+    top: -10px;
+    opacity: 1;
+    tranform: translate2D(0, -10px); }
 
 #Footer {
   position: relative;
